rybla.linkstitcher.c144a6c12afc84c16ce632ca820d86f5359f8366
Running as unit: run-p2603876-i15183966.scope; invocation ID: 5ec315f70c974288a43c33d20244ff0f
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
    Checking cfg-if v1.0.4
   Compiling libc v0.2.177
    Checking smallvec v1.15.1
   Compiling shlex v1.3.0
   Compiling find-msvc-tools v0.1.4
    Checking memchr v2.7.6
    Checking itoa v1.0.15
   Compiling cc v1.2.45
    Checking log v0.4.28
   Compiling parking_lot_core v0.9.12
    Checking scopeguard v1.2.0
   Compiling serde_core v1.0.228
    Checking lock_api v0.4.14
    Checking pin-project-lite v0.2.16
    Checking stable_deref_trait v1.2.1
   Compiling serde v1.0.228
    Checking once_cell v1.21.3
    Checking futures-core v0.3.31
    Checking bytes v1.10.1
   Compiling siphasher v1.0.1
   Compiling syn v2.0.110
   Compiling version_check v0.9.5
    Checking parking_lot v0.12.5
   Compiling typenum v1.19.0
   Compiling rand_core v0.6.4
   Compiling generic-array v0.14.7
   Compiling rand v0.8.5
   Compiling phf_shared v0.11.3
   Compiling autocfg v1.5.0
    Checking futures-sink v0.3.31
    Checking socket2 v0.6.1
   Compiling num-traits v0.2.19
    Checking signal-hook-registry v1.4.6
    Checking mio v1.1.0
   Compiling ident_case v1.0.1
   Compiling vcpkg v0.2.15
   Compiling phf_generator v0.11.3
   Compiling fnv v1.0.7
   Compiling strsim v0.11.1
   Compiling pkg-config v0.3.32
    Checking slab v0.4.11
    Checking bitflags v2.10.0
    Checking futures-channel v0.3.31
    Checking pin-utils v0.1.0
    Checking tracing-core v0.1.34
    Checking http v1.3.1
    Checking futures-task v0.3.31
    Checking equivalent v1.0.2
    Checking hashbrown v0.16.0
    Checking futures-io v0.3.31
    Checking litemap v0.8.1
    Checking percent-encoding v2.3.2
    Checking writeable v0.6.2
    Checking crypto-common v0.1.7
   Compiling openssl-sys v0.9.111
   Compiling phf_codegen v0.11.3
   Compiling ring v0.17.14
   Compiling httparse v1.10.1
    Checking http-body v1.0.1
   Compiling icu_properties_data v2.1.1
   Compiling icu_normalizer_data v2.1.1
    Checking indexmap v2.12.0
    Checking zeroize v1.8.2
   Compiling thiserror v2.0.17
    Checking try-lock v0.2.5
    Checking base64 v0.22.1
   Compiling getrandom v0.3.4
    Checking atomic-waker v1.1.2
    Checking tower-service v0.3.3
    Checking new_debug_unreachable v1.0.6
    Checking want v0.3.1
    Checking rustls-pki-types v1.13.0
    Checking block-padding v0.3.3
    Checking getrandom v0.2.16
   Compiling zerocopy v0.8.27
    Checking openssl-probe v0.1.6
    Checking untrusted v0.9.0
    Checking inout v0.1.4
   Compiling string_cache_codegen v0.5.4
    Checking encoding_rs v0.8.35
    Checking foreign-types-shared v0.1.1
   Compiling heck v0.5.0
    Checking iana-time-zone v0.1.64
   Compiling openssl v0.10.75
    Checking ipnet v2.11.0
    Checking precomputed-hash v0.1.1
   Compiling web_atoms v0.1.3
    Checking foreign-types v0.3.2
    Checking cipher v0.4.4
    Checking form_urlencoded v1.2.2
    Checking block-buffer v0.10.4
   Compiling rquickjs-sys v0.9.0
   Compiling serde_json v1.0.145
   Compiling time-core v0.1.6
    Checking tinyvec_macros v0.1.1
    Checking mac v0.1.1
   Compiling native-tls v0.2.14
   Compiling synstructure v0.13.2
   Compiling darling_core v0.20.11
   Compiling darling_core v0.21.3
    Checking ryu v1.0.20
   Compiling crc32fast v1.5.0
   Compiling rustls v0.23.35
    Checking utf8_iter v1.0.4
    Checking powerfmt v0.2.0
   Compiling num-conv v0.1.0
    Checking deranged v0.5.5
   Compiling time-macros v0.2.24
   Compiling zerofrom-derive v0.1.6
   Compiling serde_derive v1.0.228
   Compiling yoke-derive v0.8.1
   Compiling tokio-macros v2.6.0
   Compiling zerovec-derive v0.11.2
    Checking tokio v1.48.0
    Checking zerofrom v0.1.6
   Compiling displaydoc v0.2.5
    Checking yoke v0.8.1
   Compiling tracing-attributes v0.1.30
   Compiling futures-macro v0.3.31
    Checking zerovec v0.11.5
    Checking zerotrie v0.2.3
   Compiling phf_macros v0.11.3
    Checking futures-util v0.3.31
    Checking tinystr v0.8.2
    Checking icu_locale_core v2.1.1
    Checking potential_utf v0.1.4
    Checking icu_collections v2.1.1
    Checking tracing v0.1.41
   Compiling thiserror-impl v2.0.17
    Checking phf v0.11.3
   Compiling darling_macro v0.20.11
    Checking icu_provider v2.1.1
    Checking icu_normalizer v2.1.1
    Checking icu_properties v2.1.1
   Compiling darling v0.20.11
   Compiling openssl-macros v0.1.1
    Checking chrono v0.4.42
    Checking idna_adapter v1.2.1
    Checking string_cache v0.8.9
    Checking idna v1.1.0
   Compiling derive_builder_core v0.20.2
   Compiling darling_macro v0.21.3
    Checking rustls-webpki v0.103.8
    Checking ppv-lite86 v0.2.21
    Checking futf v0.1.5
    Checking tinyvec v1.10.0
    Checking digest v0.10.7
    Checking tokio-util v0.7.17
    Checking rand_core v0.9.3
    Checking num-integer v0.1.46
    Checking sync_wrapper v1.0.2
    Checking aho-corasick v1.1.4
    Checking dtoa v1.0.10
    Checking utf-8 v0.7.6
    Checking h2 v0.4.12
    Checking tower-layer v0.3.3
    Checking simd-adler32 v0.3.7
    Checking regex-syntax v0.8.8
    Checking adler2 v2.0.1
    Checking subtle v2.6.1
    Checking cpufeatures v0.2.17
    Checking miniz_oxide v0.8.9
    Checking tower v0.5.2
    Checking time v0.3.44
    Checking regex-automata v0.4.13
    Checking tendril v0.4.3
    Checking dtoa-short v0.3.5
    Checking num-bigint v0.4.6
    Checking rand_chacha v0.9.0
   Compiling derive_builder_macro v0.20.2
    Checking unicode-normalization v0.1.25
   Compiling darling v0.21.3
    Checking url v2.5.7
   Compiling cssparser-macros v0.6.1
    Checking hyper v1.8.0
   Compiling derive_more-impl v2.0.1
    Checking http-body-util v0.1.3
   Compiling selectors v0.31.0
   Compiling libsqlite3-sys v0.35.0
    Checking nom v8.0.0
    Checking byteorder v1.5.0
   Compiling rustix v1.1.2
    Checking utf8parse v0.2.2
   Compiling either v1.15.0
    Checking bytecount v0.6.9
    Checking unicode-bidi v0.3.18
    Checking pom v1.1.0
   Compiling diesel_derives v2.3.4
    Checking hyper-util v0.1.18
    Checking unicode-properties v0.1.4
    Checking iri-string v0.7.9
   Compiling dsl_auto_type v0.2.0
    Checking stringprep v0.1.5
    Checking fxhash v0.2.1
    Checking anstyle-parse v0.2.7
    Checking derive_more v2.0.1
    Checking cssparser v0.35.0
    Checking flate2 v1.1.5
    Checking tokio-rustls v0.26.4
    Checking derive_builder v0.20.2
    Checking markup5ever v0.35.0
    Checking rand v0.9.2
    Checking regex v1.12.2
    Checking tower-http v0.6.6
    Checking simple_asn1 v0.6.3
    Checking tokio-native-tls v0.3.1
    Checking sha2 v0.10.9
    Checking aes v0.8.4
    Checking md-5 v0.10.6
    Checking diligent-date-parser v0.1.5
    Checking futures-executor v0.3.31
    Checking serde_urlencoded v0.7.1
   Compiling pin-project-internal v1.1.10
   Compiling match_token v0.35.0
   Compiling snafu-derive v0.8.9
   Compiling diesel_table_macro_syntax v0.3.0
    Checking quick-xml v0.37.5
    Checking ecb v0.1.2
    Checking cbc v0.1.2
    Checking rustls-native-certs v0.8.2
    Checking pem v3.0.6
    Checking servo_arc v0.4.3
    Checking anstyle-query v1.1.5
    Checking never v0.1.0
    Checking is_terminal_polyfill v1.70.2
    Checking linux-raw-sys v0.11.0
    Checking colorchoice v1.0.4
    Checking weezl v0.1.12
    Checking ttf-parser v0.25.1
    Checking unicode-width v0.2.2
   Compiling anyhow v1.0.100
    Checking rangemap v1.6.0
    Checking anstyle v1.0.13
    Checking anstream v0.6.21
    Checking getopts v0.2.24
    Checking pin-project v1.1.10
    Checking atom_syndication v0.12.7
    Checking snafu v0.8.9
    Checking jsonwebtoken v9.3.1
    Checking hyper-rustls v0.27.7
    Checking html5ever v0.35.0
    Checking futures v0.3.31
    Checking hyper-tls v0.6.0
    Checking hyper-timeout v0.5.2
    Checking env_filter v0.1.4
    Checking adobe-cmap-parser v0.4.1
    Checking type1-encoding-parser v0.1.0
   Compiling async-trait v0.1.89
    Checking secrecy v0.10.3
    Checking euclid v0.20.14
    Checking serde_path_to_error v0.1.20
    Checking ego-tree v0.10.0
    Checking fastrand v2.3.0
    Checking cff-parser v0.1.0
    Checking downcast-rs v2.0.2
    Checking web-time v1.1.0
    Checking postscript v0.14.1
    Checking jiff v0.2.16
    Checking arc-swap v1.7.1
    Checking mime v0.3.17
    Checking xml v1.1.0
    Checking octocrab v0.47.1
    Checking xml-rs v1.0.0
    Checking reqwest v0.12.24
    Checking tempfile v3.23.0
    Checking scraper v0.24.0
    Checking rss v2.0.12
    Checking dotenvy v0.15.7
    Checking map-macro v0.3.0
    Checking lazy_static v1.5.0
    Checking urlencoding v2.1.3
    Checking env_logger v0.11.8
    Checking diesel v2.3.3
    Checking rquickjs-core v0.9.0
    Checking rquickjs v0.9.0
    Checking readability-js v0.1.5
    Checking nom_locate v5.0.0
    Checking lopdf v0.38.0
    Checking pdf-extract v0.10.0
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.3.3/src/query_builder/ast_pass.rs:228:51
    |
228 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
